Made site mostly responsive; Fixed bug in foundation loading; Stacking columns on small devices

--- a/assets/css/_app.scss
+++ b/assets/css/_app.scss
@@ -8,7 +8,7 @@ body {
 
 header {
   background: #d92212;
-  height: 75px;
+  max-height: 75px;
   color: #fff;
   box-shadow: 0 2px 5px #333;
   position: relative;
@@ -26,37 +26,46 @@ header {
   .showtimes {
     text-align: right;
     padding: 30px 10px 0 0;
-    font-size: 0.8em;
+    font-size: 0.8rem;
   }
 }
 
 nav > section > ul > li {
   text-shadow: 0 1px 2px #222;
-  line-height: 20px;
+  // line-height: 20px;
 
-  a {
-    @include single-transition();
+  // &:before,
+  // &:after {
+  //   content: "";
+  //   height: 30px;
+  //   opacity: 0.7;
+  // }
+
+  // &:before {
+  //   float: left;
+  //   margin-top: 15px;
+  //   border-right: 1px #eee solid;
+  // }
+
+  // &:after {
+  //   float: right;
+  //   margin-top: -45px;
+  //   border-right: 1px #222 solid;
+  // }
+
+  // &:first-child:before,
+  // &:last-child:after {
+  //   opacity: 0;
+  // }
+}
+
+p {
+  &.callout {
+    font-size: 1.4rem;
+    line-height: 1.4;
   }
 }
 
-nav > section > ul > li:before {
-  content: "";
-  float: left;
-  height: 30px;
-  margin-top: 15px;
-  border-right: 1px #eee solid;
-  opacity: 0.7;
-}
-
-nav > section > ul > li:after {
-  content: "";
-  float: right;
-  height: 30px;
-  margin-top: -45px;
-  border-right: 1px #222 solid;
-  opacity: 0.7;
-}
-
-nav > section > ul > li:first-child:before, nav > section > ul > li:last-child:after {
-  opacity: 0;
+footer {
+  font-size: 0.8rem;
 }
